assign2/initial_luu/src/main/mc/parser/.antlr/MCParser.py
# Generated from /Users/macbook/Documents/Study/Principle of Program Language/assign2/initial/src/main/mc/parser/MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'*'", 
                     "'!'", "'||'", "'!='", "'<'", "'<='", "'='", "'-'", 
                     "'/'", "'%'", "'&&'", "'=='", "'>'", "'>='", "'if'", 
                     "'else'", "'do'", "'while'", "'for'", "'break'", "'continue'", 
                     "'return'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','" ]

    symbolicNames = [ "<INVALID>", "VOIDTYPE", "PRIMI", "INTLIT", "REAL", 
                      "BOOLLIT", "BlockComment", "LineComment", "ADD", "MULTI", 
                      "LOGICALNOT", "LOGICALOR", "NOTEQUAL", "LESSTHAN", 
                      "LTOREQUAL", "ASS", "SUBTR", "DIVISION", "MODUL", 
                      "LOGICALAND", "LOGICALEQ", "GREATER", "GREATEREQ", 
                      "If", "Else", "Do", "While", "For", "Break", "Continue", 
                      "Return", "LB", "RB", "LP", "RP", "LS", "RS", "SEMI", 
                      "COMMA", "IDEN", "WS", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declar = 1
    RULE_vardec = 2
    RULE_vartypes = 3
    RULE_varname = 4
    RULE_funcdec = 5
    RULE_paralist = 6
    RULE_functypes = 7
    RULE_funcpara = 8
    RULE_blockstate = 9
    RULE_manydeclar = 10
    RULE_statement = 11
    RULE_postfix_array = 12
    RULE_exp = 13
    RULE_exp1 = 14
    RULE_exp2 = 15
    RULE_exp3 = 16
    RULE_eq_and_not = 17
    RULE_exp4 = 18
    RULE_exp5 = 19
    RULE_exp6 = 20
    RULE_exp7 = 21
    RULE_exp8 = 22
    RULE_exp9 = 23
    RULE_operands = 24
    RULE_literal = 25
    RULE_call_func = 26
    RULE_para_list = 27
    RULE_if_statement = 28
    RULE_do_while_statement = 29
    RULE_for_statement = 30
    RULE_break_statement = 31
    RULE_continue_statement = 32
    RULE_return_statement = 33
    RULE_exp_statement = 34

    ruleNames =  [ "program", "declar", "vardec", "vartypes", "varname", 
                   "funcdec", "paralist", "functypes", "funcpara", "blockstate", 
                   "manydeclar", "statement", "postfix_array", "exp", "exp1", 
                   "exp2", "exp3", "eq_and_not", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "exp9", "operands", "literal", "call_func", 
                   "para_list", "if_statement", "do_while_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "exp_statement" ]

    EOF = Token.EOF
    VOIDTYPE=1
    PRIMI=2
    INTLIT=3
    REAL=4
    BOOLLIT=5
    BlockComment=6
    LineComment=7
    ADD=8
    MULTI=9
    LOGICALNOT=10
    LOGICALOR=11
    NOTEQUAL=12
    LESSTHAN=13
    LTOREQUAL=14
    ASS=15
    SUBTR=16
    DIVISION=17
    MODUL=18
    LOGICALAND=19
    LOGICALEQ=20
    GREATER=21
    GREATEREQ=22
    If=23
    Else=24
    Do=25
    While=26
    For=27
    Break=28
    Continue=29
    Return=30
    LB=31
    RB=32
    LP=33
    RP=34
    LS=35
    RS=36
    SEMI=37
    COMMA=38
    IDEN=39
    WS=40
    STRINGLIT=41
    UNCLOSE_STRING=42
    ILLEGAL_ESCAPE=43
    ERROR_CHAR=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def declar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.declar()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MCParser.VOIDTYPE or _la==MCParser.PRIMI):
                    break

            self.state = 75
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(MCParser.VardecContext,0)


        def funcdec(self):
            return self.getTypedRuleContext(MCParser.FuncdecContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declar




    def declar(self):

        localctx = MCParser.DeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declar)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.vardec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.funcdec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartypes(self):
            return self.getTypedRuleContext(MCParser.VartypesContext,0)


        def varname(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarnameContext)
            else:
                return self.getTypedRuleContext(MCParser.VarnameContext,i)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_vardec




    def vardec(self):

        localctx = MCParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.vartypes()
            self.state = 82
            self.varname()
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 83
                    self.match(MCParser.COMMA)
                    self.state = 84
                    self.varname() 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 90
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VartypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_vartypes




    def vartypes(self):

        localctx = MCParser.VartypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vartypes)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MCParser.PRIMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MCParser.IDEN, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varname




    def varname(self):

        localctx = MCParser.VarnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MCParser.IDEN)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 95
                self.match(MCParser.LS)
                self.state = 96
                self.match(MCParser.INTLIT)
                self.state = 97
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functypes(self):
            return self.getTypedRuleContext(MCParser.FunctypesContext,0)


        def IDEN(self):
            return self.getToken(MCParser.IDEN, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockstate(self):
            return self.getTypedRuleContext(MCParser.BlockstateContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MCParser.ParalistContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcdec




    def funcdec(self):

        localctx = MCParser.FuncdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.functypes()
            self.state = 101
            self.match(MCParser.IDEN)
            self.state = 102
            self.match(MCParser.LB)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.PRIMI:
                self.state = 103
                self.paralist()


            self.state = 106
            self.match(MCParser.RB)
            self.state = 107
            self.blockstate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcpara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.FuncparaContext)
            else:
                return self.getTypedRuleContext(MCParser.FuncparaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_paralist




    def paralist(self):

        localctx = MCParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.funcpara()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 110
                self.match(MCParser.COMMA)
                self.state = 111
                self.funcpara()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_functypes




    def functypes(self):

        localctx = MCParser.FunctypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functypes)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MCParser.PRIMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(MCParser.PRIMI)
                self.state = 120
                self.match(MCParser.LS)
                self.state = 121
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncparaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMI(self):
            return self.getToken(MCParser.PRIMI, 0)

        def IDEN(self):
            return self.getToken(MCParser.IDEN, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_funcpara




    def funcpara(self):

        localctx = MCParser.FuncparaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcpara)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MCParser.PRIMI)
            self.state = 125
            self.match(MCParser.IDEN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LS:
                self.state = 126
                self.match(MCParser.LS)
                self.state = 127
                self.match(MCParser.RS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockstateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def manydeclar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ManydeclarContext)
            else:
                return self.getTypedRuleContext(MCParser.ManydeclarContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_blockstate




    def blockstate(self):

        localctx = MCParser.BlockstateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockstate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(MCParser.LP)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.PRIMI) | (1 << MCParser.INTLIT) | (1 << MCParser.REAL) | (1 << MCParser.BOOLLIT) | (1 << MCParser.LOGICALNOT) | (1 << MCParser.SUBTR) | (1 << MCParser.If) | (1 << MCParser.Do) | (1 << MCParser.For) | (1 << MCParser.Break) | (1 << MCParser.Continue) | (1 << MCParser.Return) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.IDEN) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 131
                self.manydeclar()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(MCParser.VardecContext,0)


        def statement(self):
            return self.getTypedRuleContext(MCParser.StatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manydeclar




    def manydeclar(self):

        localctx = MCParser.ManydeclarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_manydeclar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.PRIMI]:
                self.state = 139
                self.vardec()
                pass
            elif token in [MCParser.INTLIT, MCParser.REAL, MCParser.BOOLLIT, MCParser.LOGICALNOT, MCParser.SUBTR, MCParser.If, MCParser.Do, MCParser.For, MCParser.Break, MCParser.Continue, MCParser.Return, MCParser.LB, MCParser.LP, MCParser.IDEN, MCParser.STRINGLIT]:
                self.state = 140
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(MCParser.If_statementContext,0)


        def do_while_statement(self):
            return self.getTypedRuleContext(MCParser.Do_while_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MCParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MCParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MCParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MCParser.Return_statementContext,0)


        def exp_statement(self):
            return self.getTypedRuleContext(MCParser.Exp_statementContext,0)


        def blockstate(self):
            return self.getTypedRuleContext(MCParser.BlockstateContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_statement




    def statement(self):

        localctx = MCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.If]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.if_statement()
                pass
            elif token in [MCParser.Do]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.do_while_statement()
                pass
            elif token in [MCParser.For]:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.for_statement()
                pass
            elif token in [MCParser.Break]:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.break_statement()
                pass
            elif token in [MCParser.Continue]:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.continue_statement()
                pass
            elif token in [MCParser.Return]:
                self.enterOuterAlt(localctx, 6)
                self.state = 148
                self.return_statement()
                pass
            elif token in [MCParser.INTLIT, MCParser.REAL, MCParser.BOOLLIT, MCParser.LOGICALNOT, MCParser.SUBTR, MCParser.LB, MCParser.IDEN, MCParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 149
                self.exp_statement()
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 8)
                self.state = 150
                self.blockstate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Postfix_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_postfix_array




    def postfix_array(self):

        localctx = MCParser.Postfix_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_postfix_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MCParser.LS)
            self.state = 154
            self.exp()
            self.state = 155
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MCParser.Exp1Context,0)


        def ASS(self):
            return self.getToken(MCParser.ASS, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_exp




    def exp(self):

        localctx = MCParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exp)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.exp1(0)
                self.state = 158
                self.match(MCParser.ASS)
                self.state = 159
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.exp1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self):
            return self.getTypedRuleContext(MCParser.Exp2Context,0)


        def exp1(self):
            return self.getTypedRuleContext(MCParser.Exp1Context,0)


        def LOGICALOR(self):
            return self.getToken(MCParser.LOGICALOR, 0)

        def getRuleIndex(self):
            return MCParser.RULE_exp1



    def exp1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MCParser.Exp1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_exp1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.exp2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 172
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MCParser.Exp1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                    self.state = 167
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 168
                    self.match(MCParser.LOGICALOR)
                    self.state = 169
                    self.exp2(0) 
                self.state = 174
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(MCParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(MCParser.Exp2Context,0)


        def LOGICALAND(self):
            return self.getToken(MCParser.LOGICALAND, 0)

        def getRuleIndex(self):
            return MCParser.RULE_exp2


